Changed line 365 of docker-compose.prebuilt.yml to reference the official mongo:8.2 image

--- a/docker-compose.prebuilt.yml
+++ b/docker-compose.prebuilt.yml
@@ -362,7 +362,7 @@ services:
   # Vector search is implemented in application code (see search_repository.py)
   # Running without authentication for local development simplicity
   mongodb:
-    image: ${DOCKERHUB_ORG:-mcpgateway}/mongo:${MONGODB_VERSION:-8.2}
+    image: mongo:8.2
     container_name: mcp-mongodb
     command: mongod --replSet rs0 --bind_ip 127.0.0.1,mongodb
     ports:
