updated mongodb image syntax including mcpgateway prefix

--- a/docker-compose.prebuilt.yml
+++ b/docker-compose.prebuilt.yml
@@ -362,7 +362,7 @@ services:
   # Vector search is implemented in application code (see search_repository.py)
   # Running without authentication for local development simplicity
   mongodb:
-    image: mongo:${MONGODB_VERSION:-latest}
+    image: ${DOCKERHUB_ORG:-mcpgateway}/mongo:${MONGODB_VERSION:-latest}
     container_name: mcp-mongodb
     command: mongod --replSet rs0 --bind_ip 127.0.0.1,mongodb
     ports:
